# o3_auto_encode

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  Dockerfile  README.md  config.yaml  docker-compose.yaml  pyproject.toml  release-please-config.json  requirements.txt
.github/workflows/: conventional-pr-title.yaml  lint.yaml  on-pull-request-edited.yaml  on-pull-request.yaml  on-push-main.yaml  publish-image.yaml  release-please.yaml  test.yaml
o3_auto_encode/: CHANGELOG.md  args_parser.py  db.py  encoder.py  enums.py  ffmpeg_settings.py  ffmpeg_with_progress.py  file_manager.py  logger.py  main.py  utils.py
src/: args_parser.py  encoder.py  ffmpeg_settings.py  ffmpeg_with_progress.py  main.py
tests/: conftest.py  db_test.py  ffmpeg_settings_test.py  file_manager_test.py  main_test.py
tests/test_files/data/: partial_db.json
tests/test_files/expected/: db_expected1.json  db_expected2.yaml  interrupt_expected.json  main_expected.json  partial_expected1.json
tests/test_files/ffmpeg_configs/: test_config_1.json  test_config_1.yaml  test_config_2.json  test_config_2.yml
